Fix spacing on call to action

--- a/pattern-library/src/scss/specialised/_cta.scss
+++ b/pattern-library/src/scss/specialised/_cta.scss
@@ -21,8 +21,7 @@
   &:after {
     @extend %icon;
 
-    margin-left: 0.2em;
-    position: absolute; // Prevent underline between content and pseudo-element
+    margin-left: 0.3em;
 
     a:hover & {
       @extend %cta--icon-hover;
